CICO-16081 fixes alignment in chrome

--- a/rover/css/styles_ng_rover.css.less
+++ b/rover/css/styles_ng_rover.css.less
@@ -51,7 +51,9 @@
 ==========================================================*/
 @import "../rover/css/rover_animation.less";
 
-
+.flt-right{
+    float:right;
+}
 
 // back button
 .actions-back {
